<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TADA</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to TADA</string>
	<string name="camera">TADA recording</string>
	<string name="httpssendimage">sending images</string>
	
	<!-- Tip content -->
	<string name="tip_content">1. Arrange food and beverages on a flat surface covered by grey placement\n2. Place fidulcial marker to the lower left of the food\n3. Hold the phone in landscape mode\n</string>
	<string name="tip_checkbox">Do Not Show Again</string>
	<!-- Review Tab -->
	<string name="refresh">Refresh</string>
	<string name="review">Review</string>
	<string name="search">Search</string>
	<string name="review_search_main">Select Search Mode</string>
	
	<!-- Scanner Results -->
	<string name="retake_scan">Retake?</string>
	<string name="keep_scan">Keep?</string>
	
	<!-- Researcher Settings -->
	<string name="user_id">User ID</string>
	<string name="server_ip">Server IP</string>
	<string name="reminder1">Reminder 1</string>
	<string name="reminder2">Reminder 2</string>
	<string name="reminder3">Reminder 3</string>
	<string name="change_pwd">Change password</string>
	<string name="del_data">Delete all data</string>
	
	<!-- Preview -->
	<string name="use">use</string>
	<string name="retake">retake</string>
	
	<!-- Change Theme -->
	<string name="enter_pwd">Please enter password to continue</string>
	<string name="submit">Submit</string>
	
	<!-- Change Theme -->
	<string name="cyan">Cyan</string>
	<string name="white">White</string>
	<string name="orange">Orange</string>
	<string name="magenta">Magenta</string>
	<string name="green">Green</string>
	<string name="theme">Theme</string>
	
	<!-- Camera -->
	<string name="tips">Tips</string>
	<string name="take_picture">Snap</string>
	<string name="cancel">Cancel</string>
	
	<!-- Record Tab -->
	<string name="record_title">Record</string>
	<string name="unsent_event">unsent</string>
	
	<!-- Bar Code -->
	<string name="scan">Scan</string>
	
	<!-- More Tab -->
	<string name="settings_version">Version: 0.1.1\nRelease Date: Jun. 18 2013</string>
	<string name="settings_about">About</string>
	<string name="settings_researcher">Researcher Settings</string>
	<string name="settings_user">User Settings</string>
	<string name="more">More</string>
	
	<!-- Settings About -->
	<string name="about_title">About</string>
	<string name="tada_project">http://www.tadaproject.org</string>
	<string name="tada_website">http://www.tadaproject.org</string>
	<string name="copyright">Copyright 2013 The Board of Trustees,\nPurdue University</string>
	<string name="about_paragraph">Monitoring dietary intake provides some of the most valuable insights for mounting intervention programs for obesity prevention.\nWith the growing concerns about obesity, the need to accurately measure diet becomes imperative.\n\nTADA provides tools that translate to an accurate account of daily food and nutrient intake.</string>
</resources>
