<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="?attr/background" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/user_id" 
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textSize="18sp"
        android:text="@string/server_ip" 
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/research_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder1" 
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/research_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/research_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder3" 
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"/>

    

    <Button
        android:id="@+id/research_button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_pwd" 
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:id="@+id/research_button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_data" 
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>
