<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="?attr/background"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <FrameLayout 
		android:layout_width="fill_parent"
		android:layout_height="5dp"
		android:background="?attr/background">
	</FrameLayout>
    <FrameLayout
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="?attr/background" >
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:gravity="center"
		    android:layout_gravity="center"
		    android:padding="6dp"
		    android:text="@string/about_title"
		    android:textColor="#FFFFFFFF"
		    android:textSize="25sp" />    
	</FrameLayout>
	<FrameLayout 
		android:layout_width="fill_parent"
		android:layout_height="5dp"
		android:background="?attr/background">
	</FrameLayout>
	<FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/white">
   	</FrameLayout>  
   	<!-- From line 13 to 42, it is the top bar format.-->
   	
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/tada_website"
        android:textSize="16sp" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/about_paragraph"
        android:textSize="16sp"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#5DD2DC"
        android:text="@string/copyright"
        android:textSize="14sp"
        />
    </LinearLayout>

</ScrollView>
