<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical" >
        
        <FrameLayout 
		android:layout_width="fill_parent"
		android:layout_height="5dp"
		android:background="?attr/background">
	    </FrameLayout>
	    
        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="?attr/background">
        <TextView 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:textSize="25sp"
        	android:textColor="#FFFFFF"
        	android:padding="6dp"
        	android:gravity="center"
        	android:layout_gravity="center_horizontal"
        	android:text="@string/more"/>   
    	</FrameLayout>
    	
        <FrameLayout 
		android:layout_width="fill_parent"
		android:layout_height="5dp"
		android:background="?attr/background">
		</FrameLayout>

        <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/white">
    	</FrameLayout>
        
        <!-- From line 8 to 46, it is the top bar format.-->
        
        <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="?attr/background"></FrameLayout>
        
	<LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15sp"
        
       >
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
			android:gravity="center"
			
			>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:background="?attr/background">

                <Button
                    android:id="@+id/settings_button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:background="@drawable/settings_button"
                    android:gravity="center_vertical"
                    android:text="@string/settings_user" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/background" >

                <Button
                    android:id="@+id/settings_button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:background="@drawable/settings_button3"
                    android:gravity="center_vertical"
                    android:text="@string/settings_researcher" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/background" >

                <Button
                    android:id="@+id/settings_button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/settings_button2"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:text="@string/settings_about" />

            </TableRow>

        </TableLayout>
        
        <TextView 
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/settings_version"/>
        
        </LinearLayout>

    </LinearLayout>

</ScrollView>